GUI abstraction: Fix issues
Fix some binding issues left over from converting to ES2015.

Introduce pan optiion to the GUI container to switch off panning of the
container.

Limit focus proxy area in size and set overflow hidden to prevent very
many proxies being rendered into the screen. They're supposed to be
invisible to normal rendering and only present to screen readers et al.

--- a/src/main/base/resources/css/editor.css
+++ b/src/main/base/resources/css/editor.css
@@ -103,6 +103,9 @@
     position: absolute;
     top: 0;
     left: -2000px;
+    overflow: hidden;
+    width: 100px;
+    height: 100px;
 }
 
 .entity thead tr {
